Bug 168629 - Error if inputting url that has trailing or following spaces in the url bar
Summary: Error if inputting url that has trailing or following spaces in the url bar
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 170706 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-08-07 17:07 UTC by Ivo Anjo
Modified: 2008-11-30 16:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivo Anjo 2008-08-07 17:07:01 UTC
Version:            (using KDE 4.1.0)
Installed from:    SuSE RPMs
OS:                Linux

On konqueror you can input urls like "/home    " or "   /home" or even "   /home    " on the url bar, and they are accepted.

With dolphin you get errors with all those cases. The konqueror way of doing it is useful because sometimes you copy-paste a url on dolphin and if you have an extra space, and you get a confusing error.
Comment 1 Dario Andres 2008-11-30 13:22:57 UTC
Bug 170706 is a duplicate of this. 
Comment 2 Peter Penz 2008-11-30 16:30:38 UTC
*** Bug 170706 has been marked as a duplicate of this bug. ***
Comment 3 Peter Penz 2008-11-30 16:31:52 UTC
SVN commit 890877 by ppenz:

assure that spaces at the begin and end of a typed URL get removed

BUG: 168629

 M  +3 -2      kurlnavigator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=890877