assure that spaces at the begin and end of a typed URL get removed

BUG: 168629

svn path=/trunk/KDE/kdelibs/; revision=890877